Translate in french 0015

--- a/src/routes/community/values/index.mdx
+++ b/src/routes/community/values/index.mdx
@@ -10,7 +10,7 @@ contributors:
 
 #### ✅ Toutes les questions sont bonnes.
 
-Il n'existe pas de "question de débutant" dans notre communauté.
+Il n'existe pas de « question de débutant » dans notre communauté.
 Nous apprécions les membres de notre communauté pour leur patience, leur serviabilité et leur attitude accueillante envers les nouveaux arrivants qui font que chacun se sent chez lui.
 Alors n'hésitez pas à poser toutes les questions qui vous viennent à l'esprit sur tout ce qui concerne Qwik ou JS.
 
@@ -30,7 +30,7 @@ Il est tout à fait normal de ne pas être d'accord avec les autres, à conditio
 #### ✅ Se soutenir et s'encourager mutuellement
 
 Nous aimons féliciter les membres de notre communauté pour leurs efforts.
-Si vous voyez quelqu'un partager un projet lié à Qwik, un article de blog, une vidéo, ou toute autre "victoire"...
+Si vous voyez quelqu'un partager un projet lié à Qwik, un article de blog, une vidéo, ou toute autre « victoire »...
 donnez-lui un 👏 ou 🚀 ou tout autre emoji ou des mots gentils qui égayeront sa journée.
 Si vous voyez quelqu'un en difficulté, donnez-lui des mots d'encouragement et, si possible,
 aidez-le à s'en sortir. N'oubliez pas - enseigner est la meilleure façon d'apprendre, en plus, c'est un bon karma 😉 .
