--- a/src/routes/integrations/deployments/netlify-edge/index.mdx
+++ b/src/routes/integrations/deployments/netlify-edge/index.mdx
@@ -133,7 +133,7 @@ import { defineConfig } from "vite";
 import { qwikVite } from "@builder.io/qwik/optimizer";
 import { qwikCity } from "@builder.io/qwik-city/vite";
 import tsconfigPaths from "vite-tsconfig-paths";
-+import netlifyEdge from "@netlify/vite-plugin-netlify-edge";
+-import netlifyEdge from "@netlify/vite-plugin-netlify-edge";
 
 export default defineConfig(() => {
   return {
