--- a/src/routes/integrations/integration/partytown/index.mdx
+++ b/src/routes/integrations/integration/partytown/index.mdx
@@ -36,7 +36,7 @@ export default component$(() => {
     <QwikCityProvider>
       <head>
         <meta charSet="utf-8" />
-        <QwikPartytown forward={["dataLayer.push"]} />
+        <QwikPartytown forward={['dataLayer.push']} />
         <script
           async
           type="text/partytown"
