--- a/src/routes/qwikcity/guides/static-site-generation/index.mdx
+++ b/src/routes/qwikcity/guides/static-site-generation/index.mdx
@@ -24,7 +24,7 @@ Idéalement, plus vous pouvez en faire avec la génération de sites statiques, 
 
 Avec Qwik City cependant, la décision d'utiliser la SSG ou le SSR, ne doit pas nécessairement être l'une ou l'autre. Au contraire, votre propre implémentation peut choisir d'avoir certains chemins d'accès utilisant la SSG, tandis que d'autres pages utilisent le SSR. Cela dépend entièrement de vous et de vos besoins.
 
-# Configuration de la génération de sites statiques
+## Configuration de la génération de sites statiques
 
 La génération de sites statiques est créée à partir de l'adaptateur intégré, pour créer un adaptateur exécutez :
 
@@ -34,7 +34,7 @@ npm run qwik add
 
 Sélectionnez `Adapter: Static site (.html files)`. C'est fait.
 
-## Changements
+### Changements
 
 L'exécution de la commande ci-dessus apportera les changements suivants à votre projet :
 
@@ -49,11 +49,11 @@ node server/entry.ssr.js
 
 Vos fichiers de construction seront générés dans le dossier `dist`.
 
-## Configuration SSG
+### Configuration SSG
 
 Le fichier `adapters/static/vite.config.ts` inclut également la configuration SSG, qui sera personnalisée pour chaque implémentation.
 
-### `origin`
+#### `origin`
 
 L'URL `origin`, qui est une combinaison du schéma (protocole) et du nom d'hôte (domaine). Par exemple, `https://qwik.builder.io` a le protocole `https://` et le domaine `qwik.builder.io`. Cependant, le `origin` ne comprend pas de `pathname`.
 
@@ -61,15 +61,15 @@ Le `origin` est utilisé pour fournir une URL complète pendant la génération 
 
 Si le site commence aussi avec un chemin autre que `/`, veuillez utiliser l'option `basePathname` dans les options de configuration de Qwik City.
 
-### `outDir`
+#### `outDir`
 
 Le `outDir` est un répertoire de sortie du système de fichiers où les fichiers statiques doivent être écrits. Dans l'exemple ci-dessus, il utilise [fileURLToPath](https://nodejs.org/api/url.html#urlfileurltopathurl) de Node pour créer un chemin absolu du système de fichiers pour écrire les fichiers HTML statiques.
 
-## Exécution de Javascript
+### Exécution de Javascript
 
 Pour un projet Javascript, il est assez commun que le runtime de la compilation soit construit au dessus de [Node.js](https://nodejs.org/en/docs/). Cependant, le coeur de la génération de site statique de Qwik City n'est pas lié à l'utilisation de Node.js, c'est pourquoi la fonction `qwikCityGenerate()` est importée de `@builder.io/qwik-city/static/node`. En scopant la fonction generate à un runtime spécifique, comme Node.js, cela donne à Qwik City la flexibilité de générer des SSG à partir d'autres runtimes dans le futur, comme [Deno](https://deno.land/) ou [Bun](https://bun.sh/).
 
-# Routes dynamiques SSG
+## Routes dynamiques SSG
 
 ```tsx
 import type { StaticGenerateHandler } from '@builder.io/qwik-city';
