--- a/src/routes/qwikcity/routing/index.mdx
+++ b/src/routes/qwikcity/routing/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Qwik City - Routing
+title: Qwik City - Routage
 contributors:
   - manucorporat
   - nnelgxorz
@@ -9,13 +9,13 @@ contributors:
   - adamdbradley
 ---
 
-# Routing
+# Routage
 
-Routing in Qwik City is file-system based like [Next.js](https://nextjs.org/docs/routing/introduction), [SvelteKit](https://kit.svelte.dev/docs/routing), [SolidStart](https://start.solidjs.com/getting-started/what-is-solidstart) or Remix. Files and directories in the `src/routes` have a role in the routing of your application.
+Le routage dans Qwik City est basé sur un système de fichier comme [Next.js](https://nextjs.org/docs/routing/introduction), [SvelteKit](https://kit.svelte.dev/docs/routing), [SolidStart](https://start.solidjs.com/getting-started/what-is-solidstart) ou Remix. Les fichiers et les répertoires dans le répertoire `src/routes` ont un rôle dans le routage de votre application.
 
-- **📂 Directories:** Describe the URL segments to match by the router.
-- **📄 index. files:** Page/endpoint.
-- **🖼️ layout. files:** Nested layout/middleware.
+- **📂 Répertoires :** Décrit les segments d'URL à mettre en correspondance par le routeur.
+- **📄 Fichiers index. :** Page/endpoint.
+- **🖼️ Fichiers layout. :** Mise en page imbriquée/middleware.
 
 ## Directory-based routing
 
